<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.HomeFragment"
    android:background="@color/fondVert">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="90dp">

            <ImageView
                android:layout_width="184dp"
                android:layout_height="177dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brickBreaker"
                android:textColor="@color/main"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyName"
                android:textColor="@color/main"
                android:layout_gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="75dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:paddingHorizontal="80dp"
            android:text="@string/play"
            android:backgroundTint="@color/main"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/buttonLevel"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/level"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/main"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>